--- a/box-sizing.html
+++ b/box-sizing.html
@@ -13,7 +13,7 @@
         }
 
         .box2 {
-            box-sizing: content-box;
+            box-sizing: border-box;
             border: 5px solid #0f0;
             padding: 5px;
             width: 100px;
